Prevent new post picture to collapse too much on mobiles.

--- a/src/components/NewPost.css
+++ b/src/components/NewPost.css
@@ -149,7 +149,7 @@
     height: 100%;
     min-height: 9.3rem;
     width: min(4rem, 100%);
-    min-width: 2rem;
+    min-width: 3.2rem;
     cursor: pointer;
 }
 
